# Stark

./: .gitignore  .pre-commit-config.yaml  .~lock.RegimesDiferenciados.xlsx#  Makefile  README.md  RegimesDiferenciados.xlsx  config.py  gerador_xml.py  main.py  motor_regras.py  pyproject.toml
app/: dashboard.py
data/: data_mock.json
resouces/: message.txt  prompt.md
resultados_xml/: testcase_3101.00.00_25630.xml
results/: NBM_3926_90_90__B_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_3926_90_90__Lei_Complementar_nº_2142025,_artigo_271,_§_1º,_inciso_II.md  NBM_3926_90_90__S_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_10_00__B_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_10_00__Lei_Complementar_nº_2142025,_artigo_271,_§_1º,_inciso_II.md  NBM_4819_10_00__S_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_20_00__B_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_20_00__Lei_Complementar_nº_2142025,_artigo_271,_§_1º,_inciso_II.md  NBM_4819_20_00__S_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_40_00__B_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_40_00__Lei_Complementar_nº_2142025,_artigo_271,_§_1º,_inciso_II.md  NBM_4819_40_00__S_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_50_00__B_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  NBM_4819_50_00__Lei_Complementar_nº_2142025,_artigo_271,_§_1º,_inciso_II.md  NBM_4819_50_00__S_Lei_Complementar_nº_2142025,_artigo_271,_inciso_I.md  (+19 more)
scripts/: init.sh
src/: .env  .env.example  config.py  (+5 more)
(+5 files in other folders)
